recursion.cons.remove.Remove.scala.error
Erreur de compilation :
Remove:5: error: type mismatch;
 found   : Int
 required: List[Int]
  return l.head :: remove(l.head,v)
                            ^